--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,22 @@
-  @import "tailwindcss";
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+ 
+ @import "tailwindcss";
 
  @plugin "daisyui" {
    themes: light --default, dark ;
+ }
+
+ @plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  --color-primary: #2563EB;
+  --color-secondary: #1E293B;
+  --color-base-200: #F8FAFC;
+  --color-accent: #22C55E;
+}
+
+ *{
+  font-family: "Poppins", sans-serif;
  }
 
 a.active{
